--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   <link rel="stylesheet" href="master.css">
 </head>
 <body>
+  <div class="container">
+  </div>
   <div id="test" class="bounceIn">
     <div class="btn">
       <img id="close-btn" src="close.png" alt="" onclick='closePopup()'>
@@ -20,6 +22,9 @@
     </div>
   </div>
   <script type="text/javascript">
+
+  document.getElementsByClassName("container")[0].style.WebkitFilter = 'blur(10px)';
+  document.getElementsByClassName("container")[0].style.filter= 'blur(10px)';
 
     function nextPopup() {
       document.getElementById('title-popup').innerHTML = 'Last question, what do you do?';
